flickering background image fix

--- a/assets/style/bootstrap.css
+++ b/assets/style/bootstrap.css
@@ -261,14 +261,21 @@
 .portfolio-item-details .submenu span:hover {
   text-decoration: none;
 }
-/**   PAGE | TALENT*/#page-talent-header {
+/**   PAGE | TALENT*/#page-talent-header .bg-image,
+#page-talent-partners .bg-image {
   background: url(/assets/images/construction-cranes-sunrise.jpg) 50% 0 no-repeat fixed;
   background-size: cover;
-  padding-top: 30px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: -1;
+  opacity: 0.5;
+  filter: alpha(opacity=50);
 }
-#page-talent-partners {
-  background: url(/assets/images/construction-cranes-sunrise.jpg) 50% 0 no-repeat fixed;
-  background-size: cover;
+#page-talent-header {
+  padding-top: 30px;
 }
 .page-talent {
   position: relative;
@@ -318,9 +325,22 @@
 *   PAGE | ABOUT
 */
 .page-about {
+  padding-top: 30px;
+}
+.page-about .underlay {
+  position: fixed;
+}
+.page-about .bg-image {
   background: url(/assets/images/bridge_construction.jpg) 50% 0 no-repeat fixed;
   background-size: cover;
-  padding-top: 30px;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: -1;
+  opacity: 0.5;
+  filter: alpha(opacity=50);
 }
 .page-about .about-items .item {
   position: relative;
